tests/baselines/reference/asyncGenerators.functionDeclaration.18.es2017.errors.txt
tests/cases/conformance/asyncGenerators/es2017/functionDeclarations/asyncGenerators.functionDeclaration.18.es2017.ts(2,12): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/asyncGenerators/es2017/functionDeclarations/asyncGenerators.functionDeclaration.18.es2017.ts (1 errors) ====
    async function * f() {
        var x: yield;
               ~~~~~
!!! error TS2304: Cannot find name 'yield'.
    }